unpackaged/main/default/objects/Service_schedule__c/Service_schedule__c.object-meta.xml
<CustomObject>
    <label>Service Schedule</label>
    <nameField>
        <label>Scheduled Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>