unpackaged/main/default/objects/Service_schedule__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(b) Client Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>