unpackaged/main/default/objects/Service_schedule__c/fields/Account_Manager_Linked__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Linked__c</fullName>
    <formula>Service__r.Account__r.Account_Manager__r.FirstName&amp; &quot; &quot; &amp; Service__r.Account__r.Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(a) Client Success Manager</label>
    <type>Text</type>
</CustomField>