unpackaged/main/default/objects/Service_schedule__c/fields/Ad_Buildout_Approved__c.field-meta.xml
<CustomField>
    <fullName>Ad_Buildout_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ad Buildout Approved</label>
    <type>Checkbox</type>
</CustomField>