unpackaged/main/default/objects/Service_schedule__c/fields/AI__c.field-meta.xml
<CustomField>
    <fullName>AI__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates the use of AI to complete the deliverable</inlineHelpText>
    <label>AI</label>
    <type>Checkbox</type>
</CustomField>