unpackaged/main/default/objects/Service_schedule__c/fields/Asana_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asana_Notes__c</fullName>
    <label>Asana Notes</label>
    <type>Url</type>
</CustomField>