unpackaged/main/default/objects/Service_schedule__c/fields/Assigned_VA__c.field-meta.xml
<CustomField>
    <fullName>Assigned_VA__c</fullName>
    <formula>Service__r.Assigned_VA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned VA</label>
    <type>Text</type>
</CustomField>