unpackaged/main/default/objects/Service_schedule__c/fields/Audit__c.field-meta.xml
<CustomField>
    <fullName>Audit__c</fullName>
    <formula>Service__r.Audit_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit</label>
    <type>Text</type>
</CustomField>