unpackaged/main/default/objects/Service_schedule__c/fields/Business_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Manager__c</fullName>
    <formula>Service__r.Business_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Manager</label>
    <type>Checkbox</type>
</CustomField>