unpackaged/main/default/objects/Service_schedule__c/fields/Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Completed</label>
    <type>Checkbox</type>
</CustomField>