unpackaged/main/default/objects/Service_schedule__c/fields/Client_folder__c.field-meta.xml
<CustomField>
    <fullName>Client_folder__c</fullName>
    <formula>Service__r.Account__r.Client_Folder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client folder</label>
    <type>Text</type>
</CustomField>