unpackaged/main/default/objects/Service_schedule__c/fields/Client_Review_Approved__c.field-meta.xml
<CustomField>
    <fullName>Client_Review_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Review Approved</label>
    <type>Checkbox</type>
</CustomField>