unpackaged/main/default/objects/Service_schedule__c/fields/Content_Associate__c.field-meta.xml
<CustomField>
    <fullName>Content_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field provides visibility as to who is the content specialist listed from the old automation, please adjust content specialist B field accordingly</inlineHelpText>
    <label>(A) Content Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules5</relationshipName>
    <type>Lookup</type>
</CustomField>