unpackaged/main/default/objects/Service_schedule__c/fields/Content_Creator__c.field-meta.xml
<CustomField>
    <fullName>Content_Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Creator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules2</relationshipName>
    <type>Lookup</type>
</CustomField>