unpackaged/main/default/objects/Service_schedule__c/fields/Content_Manager__c.field-meta.xml
<CustomField>
    <fullName>Content_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules4</relationshipName>
    <type>Lookup</type>
</CustomField>