unpackaged/main/default/objects/Service_schedule__c/fields/Content_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Content_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>(B) Content Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules8</relationshipName>
    <type>Lookup</type>
</CustomField>