unpackaged/main/default/objects/Service_schedule__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent Bio</fullName>
            </value>
            <value>
                <fullName>BRR Blog</fullName>
            </value>
            <value>
                <fullName>Neighborhood Guide</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
                <isActive>false</isActive>
                <label>Blogs</label>
            </value>
            <value>
                <fullName>Misc Copy</fullName>
                <isActive>false</isActive>
                <label>Misc Copy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>