unpackaged/main/default/objects/Service_schedule__c/fields/Creating_Content_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Creating_Content_Start_Date__c</fullName>
    <label>Creating Content Start Date</label>
    <type>DateTime</type>
</CustomField>