unpackaged/main/default/objects/Service_schedule__c/fields/Deck_Sent__c.field-meta.xml
<CustomField>
    <fullName>Deck_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deck Sent</label>
    <type>Checkbox</type>
</CustomField>