unpackaged/main/default/objects/Service_schedule__c/fields/Done_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Done_Start_Date__c</fullName>
    <description>Case Number: 00155818

Tracks when a service schedule status is updated to &quot;Done&quot;</description>
    <label>Done Start Date</label>
    <type>DateTime</type>
</CustomField>