unpackaged/main/default/objects/Service_schedule__c/fields/Drafted__c.field-meta.xml
<CustomField>
    <fullName>Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drafted</label>
    <type>Checkbox</type>
</CustomField>