unpackaged/main/default/objects/Service_schedule__c/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox will identify duplicates for the salesforce team audits</inlineHelpText>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>