unpackaged/main/default/objects/Service_schedule__c/fields/Editor__c.field-meta.xml
<CustomField>
    <fullName>Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Editor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules6</relationshipName>
    <type>Lookup</type>
</CustomField>