unpackaged/main/default/objects/Service_schedule__c/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facebook</label>
    <type>Checkbox</type>
</CustomField>