unpackaged/main/default/objects/Service_schedule__c/fields/Final_QA__c.field-meta.xml
<CustomField>
    <fullName>Final_QA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final QA</label>
    <type>Checkbox</type>
</CustomField>