unpackaged/main/default/objects/Service_schedule__c/fields/Final_QA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_QA_End_Date__c</fullName>
    <label>Final QA End Date</label>
    <type>DateTime</type>
</CustomField>