unpackaged/main/default/objects/Service_schedule__c/fields/Final_QA_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_QA_Start_Date__c</fullName>
    <label>Final QA Start Date</label>
    <type>DateTime</type>
</CustomField>