unpackaged/main/default/objects/Service_schedule__c/fields/GA_Account__c.field-meta.xml
<CustomField>
    <fullName>GA_Account__c</fullName>
    <formula>Service__r.Account__r.GA_Login_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA Account</label>
    <type>Text</type>
</CustomField>