unpackaged/main/default/objects/Service_schedule__c/fields/GA_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>GA_Login_Email__c</fullName>
    <formula>Service__r.Account__r.GA_Login_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GA Login Email</label>
    <type>Text</type>
</CustomField>