unpackaged/main/default/objects/Service_schedule__c/fields/GainApp_Workspace__c.field-meta.xml
<CustomField>
    <fullName>GainApp_Workspace__c</fullName>
    <formula>Service__r.GainApp_Workspace__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GainApp Workspace</label>
    <type>Text</type>
</CustomField>