unpackaged/main/default/objects/Service_schedule__c/fields/GBP_2__c.field-meta.xml
<CustomField>
    <fullName>GBP_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP #2</label>
    <type>Checkbox</type>
</CustomField>