unpackaged/main/default/objects/Service_schedule__c/fields/GBP_2_text__c.field-meta.xml
<CustomField>
    <fullName>GBP_2_text__c</fullName>
    <label>GBP #2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>