unpackaged/main/default/objects/Service_schedule__c/fields/GBP_3__c.field-meta.xml
<CustomField>
    <fullName>GBP_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP #3</label>
    <type>Checkbox</type>
</CustomField>