unpackaged/main/default/objects/Service_schedule__c/fields/GBP_5__c.field-meta.xml
<CustomField>
    <fullName>GBP_5__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GBP #5</label>
    <type>Checkbox</type>
</CustomField>