unpackaged/main/default/objects/Service_schedule__c/fields/GBP_Link__c.field-meta.xml
<CustomField>
    <fullName>GBP_Link__c</fullName>
    <formula>Service__r.Account__r.GBP_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Link</label>
    <type>Text</type>
</CustomField>