unpackaged/main/default/objects/Service_schedule__c/fields/GBP_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>GBP_Login_Email__c</fullName>
    <formula>TEXT( Service__r.Account__r.GBP_Login_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GBP Login Email</label>
    <type>Text</type>
</CustomField>