unpackaged/main/default/objects/Service_schedule__c/fields/Google_document_link__c.field-meta.xml
<CustomField>
    <fullName>Google_document_link__c</fullName>
    <label>Google document link</label>
    <type>Url</type>
</CustomField>