unpackaged/main/default/objects/Service_schedule__c/fields/Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>Health_Rating__c</fullName>
    <label>Health Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>