unpackaged/main/default/objects/Service_schedule__c/fields/Implementation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Manager__c</fullName>
    <formula>Service__r.Account__r.Implementation_Manager__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Manager</label>
    <type>Text</type>
</CustomField>