unpackaged/main/default/objects/Service_schedule__c/fields/In_Progress_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Start_Date__c</fullName>
    <description>Case Number: 00155818

Tracks when a service schedule status is updated to &quot;In Progress&quot;</description>
    <label>In Progress Start Date</label>
    <type>DateTime</type>
</CustomField>