unpackaged/main/default/objects/Service_schedule__c/fields/Instagram__c.field-meta.xml
<CustomField>
    <fullName>Instagram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Instagram</label>
    <type>Checkbox</type>
</CustomField>