unpackaged/main/default/objects/Service_schedule__c/fields/KWA_Link__c.field-meta.xml
<CustomField>
    <fullName>KWA_Link__c</fullName>
    <formula>Service__r.KWA_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KWA Link</label>
    <type>Text</type>
</CustomField>