unpackaged/main/default/objects/Service_schedule__c/fields/LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn</label>
    <type>Checkbox</type>
</CustomField>