unpackaged/main/default/objects/Service_schedule__c/fields/List_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>List_of_Locations__c</fullName>
    <label>List of Locations</label>
    <type>TextArea</type>
</CustomField>