unpackaged/main/default/objects/Service_schedule__c/fields/Marketing_Brief__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Brief__c</fullName>
    <formula>Service__r.Account__r.Marketing_Brief__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Brief</label>
    <type>Text</type>
</CustomField>