unpackaged/main/default/objects/Service_schedule__c/fields/Marketing_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Checklist__c</fullName>
    <formula>Service__r.Account__r.Marketing_Checklist__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Checklist</label>
    <type>Text</type>
</CustomField>