unpackaged/main/default/objects/Service_schedule__c/fields/Meeting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meeting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Schedules</relationshipLabel>
    <relationshipName>Service_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>