unpackaged/main/default/objects/Service_schedule__c/fields/Migration_Audit_Redirects__c.field-meta.xml
<CustomField>
    <fullName>Migration_Audit_Redirects__c</fullName>
    <formula>Service__r.Account__r.Migration_Audit_Redirects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Migration Audit + Redirects</label>
    <type>Text</type>
</CustomField>