unpackaged/main/default/objects/Service_schedule__c/fields/Neighborhood_Guide_Type__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood_Guide_Type__c</fullName>
    <label>Neighborhood Guide Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optimized Guide</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Long-form</fullName>
                <isActive>false</isActive>
                <label>Long-form</label>
            </value>
            <value>
                <fullName>Short-form</fullName>
                <isActive>false</isActive>
                <label>Short-form</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>