unpackaged/main/default/objects/Service_schedule__c/fields/Not_Drafted__c.field-meta.xml
<CustomField>
    <fullName>Not_Drafted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Drafted</label>
    <type>Checkbox</type>
</CustomField>