unpackaged/main/default/objects/Service_schedule__c/fields/Number_of_Posts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Posts__c</fullName>
    <formula>CASE( Service__r.Product__c , &quot;Social Media Basic&quot;, 10, &quot;Social Media Premium&quot;, 15,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Posts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>