unpackaged/main/default/objects/Service_schedule__c/fields/Number_of_Revisions_per_month__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Revisions_per_month__c</fullName>
    <description>Manually imported by Ops when Gainapp provides monthly data dump</description>
    <inlineHelpText>Number of revisions provided by GainApp</inlineHelpText>
    <label># of Revisions per month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>