unpackaged/main/default/objects/Service_schedule__c/fields/of_Pages_used__c.field-meta.xml
<CustomField>
    <fullName>of_Pages_used__c</fullName>
    <label># of Pages used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>