unpackaged/main/default/objects/Service_schedule__c/fields/of_posts_per_month__c.field-meta.xml
<CustomField>
    <fullName>of_posts_per_month__c</fullName>
    <formula>Service__r.of_posts_per_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of posts per month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>