unpackaged/main/default/objects/Service_schedule__c/fields/Optimized__c.field-meta.xml
<CustomField>
    <fullName>Optimized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optimized</label>
    <type>Checkbox</type>
</CustomField>