unpackaged/main/default/objects/Service_schedule__c/fields/Paid_Media_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paid Media Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>