unpackaged/main/default/objects/Service_schedule__c/fields/PDF_of_Content_Published_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>PDF_of_Content_Published_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF of Content Published Uploaded</label>
    <type>Checkbox</type>
</CustomField>