unpackaged/main/default/objects/Service_schedule__c/fields/Photos_In__c.field-meta.xml
<CustomField>
    <fullName>Photos_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos In</label>
    <type>Checkbox</type>
</CustomField>