unpackaged/main/default/objects/Service_schedule__c/fields/PM_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>PM_Quality_Score__c</fullName>
    <label>PM: Quality Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>