unpackaged/main/default/objects/Service_schedule__c/fields/PMS_Buildout_Approved__c.field-meta.xml
<CustomField>
    <fullName>PMS_Buildout_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PMS Buildout Approved</label>
    <type>Checkbox</type>
</CustomField>