unpackaged/main/default/objects/Service_schedule__c/fields/PMS_Link__c.field-meta.xml
<CustomField>
    <fullName>PMS_Link__c</fullName>
    <formula>Service__r.PMS_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMS Link</label>
    <type>Text</type>
</CustomField>