unpackaged/main/default/objects/Service_schedule__c/fields/Preferred_Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Posted_Date__c</fullName>
    <description>Case # 00229246</description>
    <label>Preferred Posted Date</label>
    <type>Date</type>
</CustomField>