unpackaged/main/default/objects/Service_schedule__c/fields/Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Questionnaire__c</fullName>
    <label>Questionnaire</label>
    <type>Url</type>
</CustomField>