unpackaged/main/default/objects/Service_schedule__c/fields/Rating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reason__c</fullName>
    <label>Rating Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Health_Rating__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of clear communication during the call</fullName>
            </value>
            <value>
                <fullName>Client is having issues in understanding/communicating their goals</fullName>
            </value>
            <value>
                <fullName>Client expresses dissatisfaction or negative feedback</fullName>
            </value>
            <value>
                <fullName>Unresolved complaints or concerns are voiced during the call</fullName>
            </value>
            <value>
                <fullName>Client is unhappy with performance or delayed deliverables</fullName>
            </value>
            <value>
                <fullName>Client expressed concerns with budget</fullName>
            </value>
            <value>
                <fullName>Low client engagement during the call</fullName>
            </value>
            <value>
                <fullName>Limited participation or interest in discussions</fullName>
            </value>
            <value>
                <fullName>Clear communication, but lacking depth or proactiveness</fullName>
            </value>
            <value>
                <fullName>Call includes routine updates but strategic discussions are one-way without involvement from the client</fullName>
            </value>
            <value>
                <fullName>Client is neither overly positive nor negative</fullName>
            </value>
            <value>
                <fullName>No specific feedback provided</fullName>
            </value>
            <value>
                <fullName>The client is indifferent about performance</fullName>
            </value>
            <value>
                <fullName>The client is not putting much effort into their marketing outside of what LP is doing</fullName>
            </value>
            <value>
                <fullName>Adequate client participation, but not highly engaged</fullName>
            </value>
            <value>
                <fullName>Limited client contribution to the conversation</fullName>
            </value>
            <value>
                <fullName>Clear and proactive communication during the call</fullName>
            </value>
            <value>
                <fullName>The client is initiating discussions on potential improvements or opportunities</fullName>
            </value>
            <value>
                <fullName>The client expresses satisfaction and positive feedback</fullName>
            </value>
            <value>
                <fullName>Acknowledgment of value gained from the LP’s product and solutions</fullName>
            </value>
            <value>
                <fullName>The client is happy about positive performance and deliverables are on track</fullName>
            </value>
            <value>
                <fullName>The client is a strong candidate for upselling opportunities</fullName>
            </value>
            <value>
                <fullName>Delivering additional value or unexpected positive outcomes.</fullName>
            </value>
            <value>
                <fullName>Active client engagement and participation in discussions</fullName>
            </value>
            <value>
                <fullName>Collaboration and enthusiasm were demonstrated during the call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>