unpackaged/main/default/objects/Service_schedule__c/fields/Ready_for_Client_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Client_Review_Date__c</fullName>
    <label>Ready for Client Review Date</label>
    <type>DateTime</type>
</CustomField>