unpackaged/main/default/objects/Service_schedule__c/fields/Ready_for_Client_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Client_Review_End_Date__c</fullName>
    <label>Ready for Client Review End Date</label>
    <type>DateTime</type>
</CustomField>