unpackaged/main/default/objects/Service_schedule__c/fields/Rejection_Rate__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Rate__c</fullName>
    <label>Rejection Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>