unpackaged/main/default/objects/Service_schedule__c/fields/Rejection_Rate_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Rate_Calculated__c</fullName>
    <formula>Number_of_Revisions_per_month__c /  of_posts_per_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Rate Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>