unpackaged/main/default/objects/Service_schedule__c/fields/Remaining_Posts_Full_Time__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Posts_Full_Time__c</fullName>
    <description>Number of remaining posts for full time content creators.</description>
    <formula>400 - Number_of_Posts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of remaining posts for full time content creators.</inlineHelpText>
    <label>Remaining Posts _ Full Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>