unpackaged/main/default/objects/Service_schedule__c/fields/Reporting_Deck__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Deck__c</fullName>
    <label>Reporting Deck</label>
    <type>Url</type>
</CustomField>