unpackaged/main/default/objects/Service_schedule__c/fields/Reporting_Link__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Link__c</fullName>
    <formula>Service__r.Account__r.Reporting_link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Link</label>
    <type>Text</type>
</CustomField>