unpackaged/main/default/objects/Service_schedule__c/fields/Reporting_Week_2__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Week_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reporting Week 2</label>
    <type>Checkbox</type>
</CustomField>